--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/ferrarilogo.png" />
     <title>Ferrari</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -11,12 +12,13 @@
     <header>
       <div class="content">
         <nav>
-          <p class="brand"><strong>FERRARI</strong></p>
+          <img class="brand" src="images/about.png" alt="Logo" />
           <ul>
-            <li><a href="#catalog">Catalog</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#feature">Features</a></li>
-            <button>Login</button>
+            <li><a href="#catalog"><strong>Catalog</strong></a></li>
+            <li><a href="#about"><strong>About</strong></a></li>
+            <li><a href="#feature"><strong>Features</strong></a></li>
+            <li><a rel="stylesheet" href="indexcarrinho.html"><strong>Store</strong></a></li>
+            <li><a rel="stylesheet" href="indexlogin.html"><button><strong>Login</strong></button></a></li>
           </ul>
         </nav>
         <div class="header-block">
@@ -145,7 +147,7 @@
         </div>
         <div class="about-content">
           <div class="left">
-            <img src="images/ferrarilogo.png" alt="About" />
+            <img src="images/carro.jpg" alt="About" />
           </div>
           <div class="right">
             <h3>Join technology and mobility</h3>
@@ -168,7 +170,7 @@
       </div>
     </section>
 
-    <section class="features" id="features">
+    <section class="feature" id="feature">
       <div class="content">
         <div class="title-wrapper-features">
           <p>What you can do</p>
