--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -57,7 +57,7 @@
             </div>
             <div class="campo">
                 <br>
-                <label for="experiencia"><strong>Biografia: </strong></label>
+                <label for="experiencia"><strong>Biografia </strong></label>
                 <textarea rows="3" style="width: 23em" id="experiencia" name="biografia" placeholder="Digite sua biografia..."></textarea>
             </div>
             <button class="botao" type="submit" onsubmit="">Enviar</button>            
