--- a/indexlogin.html
+++ b/indexlogin.html
@@ -24,11 +24,11 @@
                     <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required> 
                 </div>
             </form>
-                <li><a rel="stylesheet" href="indexcadastro.html">não tem uma conta?</a></li>       
+            <li><a rel="stylesheet" href="indexcadastrar.html">não tem uma conta?</a></li>       
             <div class="mostra">
                 <span></span>
             </div>
         </div>
-        <script src="assets/js/script.js"></script>   
+
     </body>
 </html>
