--- a/indexcadastrar.html
+++ b/indexcadastrar.html
@@ -7,13 +7,13 @@
         <link rel="icon" href="images/ferrarilogo.png" />
         <title>Ferrari</title>
 
-        <link rel="stylesheet" href="css/styleslogin.css">
+        <link rel="stylesheet" href="css/cadastrar.css">
     </head>
     <body>
         <p><strong>Informações de cadrasto</strong></p>
         <div class="container">
             <form id="idcadastro" action="" method="POST">
-                <div>                
+                <div>    
                     Nome: 
                     <input type="text" id="nome" placeholder="Digite seu nome" required> 
 
@@ -24,19 +24,19 @@
                     <input type="text" id="idade" placeholder="Digite sua idade" required>
                 </div>
             </form>
-                <form id="idcadastro" action="" method="POST">
-                    CPF:
-                    <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required>   
+            <form id="idcadastro" action="" method="POST">
+                CPF:
+                <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required>   
                         
-                    RG:
-                    <input type="text" id="rg" placeholder="xx.xxx.xxx-x" required> 
+                RG:
+                <input type="text" id="rg" placeholder="xx.xxx.xxx-x" required> 
             
-                    <div class="button">
-                        <input type="button" onclick="" value="Cadastrar">
-                        <p id="iddados"></p>
-                    </div>
-                </form>
-                <li><a rel="stylesheet" href="indexlogin.html">já tem uma conta?</a></li>         
+                <div class="button">
+                    <input type="button" onclick="" value="Cadastrar">
+                    <p id="iddados"></p>
+                </div>
+            </form>
+            <li><a rel="stylesheet" href="indexlogin.html">já tem uma conta?</a></li>         
             <div class="mostra">
                 <span></span>
             </div>
