--- a/indexcarrinho.html
+++ b/indexcarrinho.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="images/ferrarilogo.png" />
     
     <title>Ferrari</title>
-    <link rel="stylesheet" href="css/stylescarrinho.css" />
+    <link rel="stylesheet" href="css/carrinho.css" />
 </head>
 <body>
 
@@ -91,7 +91,7 @@
                 <h1>--</h1>
                 <div class="pizzaInfo--desc">--</div>
                 <div class="pizzaInfo--sizearea">
-                    <div class="pizzaInfo--sector">Tamanho</div>
+                    <div class="pizzaInfo--sector">Cores</div>
                     <div class="pizzaInfo--sizes">
                         <div data-key="P" class="pizzaInfo--size">VERMELHO <span>--</span></div>
                         <div data-key="M" class="pizzaInfo--size">PRETO <span>--</span></div>
@@ -116,7 +116,7 @@
     </div>
     <!-- /janela modal .pizzaWindowArea -->
 
-    <script src="carros.js"></script>
+    <script src="js/carros.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
