--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#about"><strong>About</strong></a></li>
             <li><a href="#feature"><strong>Features</strong></a></li>
             <li><a rel="stylesheet" href="indexcarrinho.html"><strong>Store</strong></a></li>
-            <li><a rel="stylesheet" href="indexlogin.html"><button><strong>Login</strong></button></a></li>
+            <li><a rel="stylesheet" href="indexlogin.html"><button>Login</button></a></li>
           </ul>
         </nav>
         <div class="header-block">
