--- a/indexlogin.html
+++ b/indexlogin.html
@@ -7,10 +7,10 @@
         <link rel="icon" href="images/ferrarilogo.png" />
         <title>Ferrari</title>
 
-        <link rel="stylesheet" href="css/styleslogin.css">
+        <link rel="stylesheet" href="css/login.css">
     </head>
     <body>
-        <p><strong>Informações de cadrasto</strong></p>
+        <p><strong>Informações de login</strong></p>
         <div class="container">
             <form id="idcadastro" action="" method="POST">
                 <div>                
@@ -22,6 +22,10 @@
 
                     CPF:
                     <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required> 
+                </div>
+                <div class="button">
+                    <input type="button" onclick="" value="Cadastrar">
+                    <p id="iddados"></p>
                 </div>
             </form>
             <li><a rel="stylesheet" href="indexcadastrar.html">não tem uma conta?</a></li>       
