--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" type="text/css" href="trabalheconosco.css" media="screen">
-        <title>Cadastro</title>
+        <link rel="stylesheet" type="text/css" href="css/trabalheconosco.css" media="screen">
+        <link rel="icon" href="images/ferrarilogo.png" />
+        <title>Ferrari</title>
     </head>
     <body>  
         <div>
-            <h1 id="titulo">Cadastro</h1>
+            <h1 id="titulo">Trabalhe Conosco</h1>
             <p id="subtitulo">Complete suas informações</p>
             <br>
         </div>
