--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
           <img class="brand" src="images/about.png" alt="Logo" />
           <ul>
-            <li><a href="#catalog"><strong>Catalog</strong></a></li>
+            <li><a href="#catalog"><strong>Catalogo</strong></a></li>
             <li><a href="#about"><strong>About</strong></a></li>
-            <li><a href="#feature"><strong>Features</strong></a></li>
-            <li><a rel="stylesheet" href="indexcarrinho.html"><strong>Store</strong></a></li>
+            <li><a href="#feature"><strong>Recursos</strong></a></li>
+            <li><a rel="stylesheet" href="indexcarrinho.html"><strong>Loja</strong></a></li>
             <li><a rel="stylesheet" href="indexlogin.html"><button>Login</button></a></li>
           </ul>
         </nav>
@@ -42,7 +42,7 @@
             class="search-input"
             placeholder="Choose your favorite model"
           />
-          <button class="search-button">Search</button>
+          <button class="search-button">Pesquisar</button>
         </div>
         <div class="card-wrapper">
           <div class="card-item">
@@ -52,7 +52,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -62,7 +62,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -72,7 +72,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -82,7 +82,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -92,7 +92,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -102,7 +102,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -112,7 +112,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -122,7 +122,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
           <div class="card-item">
@@ -132,7 +132,7 @@
               <p>
                 The best sound similar to Formula1 racing
               </p>
-              <button type="button">I want this!</button>
+              <button type="button">Saiba mais</button>
             </div>
           </div>
         </div>
@@ -245,7 +245,7 @@
             </div>
           </div>
           <div class="footer-contact">
-            <li><a rel="stylesheet" href="trabalheconosco.html">trabalhe conosco</a></li>
+            <a rel="stylesheet" href="trabalheconosco.html">trabalhe conosco</a>
             <h6>+55 41 999446252</h6>
             <h6>contato@ferrari.com.br</h6>
             <h6>Nome da Rua, Colombo PR</h6>
