--- a/indexcadastrar.html
+++ b/indexcadastrar.html
@@ -10,36 +10,44 @@
         <link rel="stylesheet" href="css/cadastrar.css">
     </head>
     <body>
-        <p><strong>Informações de cadrasto</strong></p>
+        <div>
+            <nav>
+              <ul>
+                <li><a rel="stylesheet" href="indexlogin.html"><button>Voltar</button></a></li>
+              </ul>
+            </nav>
+        </div>
+        <p><strong>Informações de cadrasto</strong></p> 
         <div class="container">
+
             <form id="idcadastro" action="" method="POST">
-                <div>    
-                    Nome: 
-                    <input type="text" id="nome" placeholder="Digite seu nome" required> 
-
-                    Sobrenome: 
-                    <input type="text" id="sobrenome" placeholder="Digite o sobrenome" required> 
-
-                    Idade:
-                    <input type="text" id="idade" placeholder="Digite sua idade" required>
+                <div class="value">
+                    <ul>
+                        Nome: 
+                        <ul>    
+                            <input type="text" id="nome" placeholder="Digite seu nome" required>
+                        </ul>
+                        Sobrenome: 
+                        <ul>
+                            <input type="text" id="sobrenome" placeholder="Digite o sobrenome" required> 
+                        </ul>
+                        Idade:
+                        <ul>
+                            <input type="text" id="idade" placeholder="Digite sua idade" required>
+                        </ul>
+                        CPF:
+                        <ul>
+                            <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required> 
+                        </ul>
+                    </ul>
                 </div>
             </form>
-            <form id="idcadastro" action="" method="POST">
-                CPF:
-                <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required>   
-                        
-                RG:
-                <input type="text" id="rg" placeholder="xx.xxx.xxx-x" required> 
-            
-                <div class="button">
-                    <input type="button" onclick="" value="Cadastrar">
-                    <p id="iddados"></p>
-                </div>
-            </form>
-            <li><a rel="stylesheet" href="indexlogin.html">já tem uma conta?</a></li>         
-            <div class="mostra">
-                <span></span>
+            <div class="button">
+                <input type="button" onclick="" value="Cadastrar">
+                <p id="iddados"></p>
             </div>
+            <a href="indexlogin.html"><strong>já tem uma conta?</strong></a>   
         </div> 
+
     </body>
 </html>
