--- a/indexlogin.html
+++ b/indexlogin.html
@@ -10,29 +10,40 @@
         <link rel="stylesheet" href="css/login.css">
     </head>
     <body>
-        <p><strong>Informações de login</strong></p>
+        <div>
+            <nav>
+              <ul>
+                <li><a rel="stylesheet" href="index.html"><button>Voltar</button></a></li>
+              </ul>
+            </nav>
+        </div>
+        <p><strong>Informações de login</strong></p> 
         <div class="container">
+
             <form id="idcadastro" action="" method="POST">
-                <div>                
-                    Nome: 
-                    <input type="text" id="nome" placeholder="Digite seu nome" required> 
-
-                    Sobrenome: 
-                    <input type="text" id="sobrenome" placeholder="Digite o sobrenome" required> 
-
-                    CPF:
-                    <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required> 
-                </div>
-                <div class="button">
-                    <input type="button" onclick="" value="Cadastrar">
-                    <p id="iddados"></p>
+                <div class="value">
+                    <ul>
+                        Nome: 
+                        <ul>    
+                            <input type="text" id="nome" placeholder="Digite seu nome" required>
+                        </ul>
+                        Sobrenome: 
+                        <ul>
+                            <input type="text" id="sobrenome" placeholder="Digite o sobrenome" required> 
+                        </ul>
+                        CPF:
+                        <ul>
+                            <input type="text" id="cpf" placeholder="xxx.xxx.xxx-xx" required> 
+                        </ul>
+                    </ul>
                 </div>
             </form>
-            <li><a rel="stylesheet" href="indexcadastrar.html">não tem uma conta?</a></li>       
-            <div class="mostra">
-                <span></span>
+            <div class="button">
+                <input type="button" onclick="" value="Entrar">
+                <p id="iddados"></p>
             </div>
-        </div>
+            <a href="indexcadastrar.html"><strong>não tem uma conta?</strong></a>   
+        </div> 
 
     </body>
 </html>
